--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,11 @@ $color3: #77B0AA;
 $color4: #E3FEF7;
 
 
+
 //pages
 @import './pages/about.scss';
+@import './pages/guide.scss';
+
 
 
 //components
