--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ $color4: #E3FEF7;
 //pages
 @import './pages/about.scss';
 @import './pages/guide.scss';
+@import './pages/components/comments';
 
 
 
