--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,4 +1,25 @@
 .navbar-container {
+
+  .navbar-container_time{
+    width: 100%;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    h1{
+      text-decoration: underline;
+    }
+    .navbar-container_time-weater{
+      display: flex;
+      flex-direction: column;
+      text-align: end;
+      p{
+        font-size: small;
+      }
+    }
+  }
+
     color: white;
     display: block;
     text-align: center;
