--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,7 +7,10 @@
     justify-content: space-between;
 
     h1 {
-      text-decoration: underline;
+      color: $color4;
+      &:hover{
+        cursor: pointer;
+      }
     }
   }
 
