--- a/src/styles/todo/components/_taskItem.scss
+++ b/src/styles/todo/components/_taskItem.scss
@@ -45,6 +45,9 @@
       font-size: 1.7rem;
       font-weight: 700;
     }
+    p{
+      font-weight: 500;
+    }
   }
 
   &:hover .taskItem_task-content {
