--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -7,6 +7,7 @@
   align-items: center;
   background-color: $color3;
   min-height: 50vh;
+  padding-bottom: 1rem;
 
   .about_seccion {
     display: flex;
