--- a/src/styles/todo/components/_taskList.scss
+++ b/src/styles/todo/components/_taskList.scss
@@ -5,4 +5,9 @@
     gap: 1.5rem;
     padding: 1rem;
     justify-content: center;
+    min-height: 25vh;
+
+    @include movil{
+        min-height: 20vh;
+    }
 }
