--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -18,7 +18,7 @@
             min-height: 75px;
         }
 
-        @include movil{
+        @include tablet{
             flex-direction: column;
         }
     }
