reform_styles_responsive

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,6 +29,8 @@ $color4: #E3FEF7;
 @import './layout/footer';
 @import './layout/components/time';
 @import './layout/components/homeTitle';
+@import './layout/components/links';
+
 
 //todo
 @import './todo/components/penddingTask';
