--- a/src/styles/layout/components/_time.scss
+++ b/src/styles/layout/components/_time.scss
@@ -6,6 +6,7 @@
     background: #eceff1;
     box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
     border-radius: 70px;
+    color: $color4;
 
     .navbar-container_time-weater {
       display: flex;
