--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,15 +1,13 @@
 
 footer{
-    height: 50px;
-    align-items: flex-start;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     width: 100%;
-
+    justify-content: space-between;
+    align-items: center;
+    min-height: 20vh;
 
     .footerContainer {
-
     display: flex;
     justify-content: flex-start;
     align-items: center;
